Read block_align from extradata when decoding qclp in aiff.

Fixes ticket #1287.